Bold the first 5 words of impact paragraph and fix spacing bug

--- a/src/components/impact_picture_section/ImpactPictureSection.scss
+++ b/src/components/impact_picture_section/ImpactPictureSection.scss
@@ -4,7 +4,7 @@
 .impactPicture {
   width: 100%;
   @include min-breakpoint(1200px){
-    height: 860px;
+    height: 955px;
     position: relative;
     text-align: right;
     max-width: 1070px;
@@ -63,6 +63,9 @@
   &__text {
     margin: 15px 0;
     max-width: 200px;
+    &__bold {
+      font-weight: bold;
+    }
     &__left {
       text-align: right;
     }
